Add final LSTM with mfcc+mel

--- a/trimmed_mfcc_SVM_KNN.ipynb
+++ b/trimmed_mfcc_SVM_KNN.ipynb
@@ -1949,8 +1949,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "confusion = confusion_matrix(labels=label, predictions=prediction, num_classes=6)"
+    "confusion = confusion_matrix(labels=y_test, predictions=prediction, num_classes=6)"
    ]
   },
   {
