Fix bug in confusion matrix

--- a/trimmed_mfcc_SVM_KNN.ipynb
+++ b/trimmed_mfcc_SVM_KNN.ipynb
@@ -1949,7 +1949,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prediction = model.predict_classes(X_test)\n",
+    "label = np.where(y_test)[1]"
+   ]
   },
   {
    "cell_type": "code",
@@ -1957,7 +1960,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "confusion = confusion_matrix(labels=y_test, predictions=prediction, num_classes=6)"
+    "confusion = confusion_matrix(labels=label, predictions=prediction, num_classes=6)"
    ]
   },
   {
@@ -1988,7 +1991,7 @@
     }
    ],
    "source": [
-    "cm = pd.DataFrame(confusion , index = [i for i in cate] , columns = [i for i in cate])\n",
+    "cm = pd.DataFrame(confusion.numpy(), index = [i for i in cate] , columns = [i for i in cate])\n",
     "sns.heatmap(cm, linecolor='white', cmap='Blues', linewidth=1, annot=True, fmt='')\n",
     "plt.title('Confusion Matrix', size=20)\n",
     "plt.xlabel('Predicted Labels', size=14)\n",
