Updated notebooks data source

--- a/6_mfcc_CNN_final.ipynb
+++ b/6_mfcc_CNN_final.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = np.loadtxt('../data/2d_mfcc/features.txt')\n",
+    "features = np.loadtxt('data/2d_mfcc/features.txt')\n",
     "features = features.reshape((7442, 216, 17))"
    ]
   },
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "targets = np.loadtxt('../data/2d_mfcc/targets.txt')"
+    "targets = np.loadtxt('data/2d_mfcc/targets.txt')"
    ]
   },
   {
